--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,16 +7,12 @@ body{
 h1{
     font-size: 5rem;
     font-family: 'Sacramento', cursive;
-    margin-bottom: 0px;
     font-weight: normal;
 }
 h2{
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
     font-size: 2,5rem;
-    margin-top: 0px;
-    position: relative;
-    bottom: 6rem;
 }
 h3{
     font-family: 'Montserrat', sans-serif;
@@ -24,8 +20,15 @@ h3{
 }
 .section1{
     background-color: #8FE3CF;
-    height: 52.5rem;
-    
+}
+.maintitle{
+    margin-bottom: 0px;
+
+}
+.subtitle{
+    margin-top: 0px;
+    position: relative;
+    bottom: 6rem;
 }
 .h1class{
     position: relative;
@@ -34,8 +37,7 @@ h3{
 }
  .section2{
     background-color: #256D85;
-    height: 100px;
-    width: 100%;
+    line-height: 2;
 }
 .section3{
     background-color: #2B4865;
@@ -50,13 +52,8 @@ h3{
 }
 .mountain{
     position: relative;
-    right: auto;
+    margin: auto;
 }
-/*.cloud{
-    position: absolute;  
-    -webkit-transform: translate(-50%, 50%);
-    transform: translate(-50%, 50%); 
-}*/
 .cloud2{
     position: relative;
     margin: 5% 0 0 50%;
@@ -67,4 +64,45 @@ h3{
     position: relative;
     right: 12rem;
     top: 8.75rem;
+}
+.tools{
+    width: 6rem;
+    height: auto;
+    float: left;
+    padding-right: 30px;    
+} 
+.skillsrow{
+    width: 50%;
+    text-align: left;           
+    margin: 100px auto 100px auto;
+}
+.skillsparagraph{
+    position: relative;
+    bottom: 5rem;
+    width: 40%;
+}
+.meinyellow2{
+    width: 5rem;
+    position: relative;
+}
+.whoiamp{
+    width: 20%;
+    margin: auto;
+}
+.whaticando{
+    width: 50%;
+    text-align: right;
+    margin: 100px auto 100px auto;
+}
+.whaticandop{
+    position: relative;
+    width: 60%;
+    bottom: 5rem;
+    float: right;
+
+}
+.items{
+    width: 12rem;
+    float:right;
+    height: auto;
 }
