--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,8 @@ body{
     text-align: center;
     font-family: 'Merriweather', serif;
     font-weight: normal;
+    color: #202929;
+
 }
 h1{
     font-size: 5rem;
@@ -13,6 +15,7 @@ h2{
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
     font-size: 2,5rem;
+    padding-bottom: 10px;
 }
 h3{
     font-family: 'Montserrat', sans-serif;
@@ -41,11 +44,9 @@ h3{
 }
 .section3{
     background-color: #2B4865;
-    height: 200px;
-    width: 200px;
-}
-.section4{
-    background-color: #002B5B;
+    height: 125px;
+    width: auto;
+    margin-bottom: 0px;
 }
 .dev{
     text-decoration: underline;
@@ -105,4 +106,61 @@ h3{
     width: 12rem;
     float:right;
     height: auto;
+}
+.btn {
+    line-height: 50px;
+    height: 50px;
+    text-align: center;
+    width: 120px;
+    cursor: pointer;
+  }
+  .btn-two {
+    color: #FFF;
+    transition: all 0.5s;
+    position: relative; 
+  }
+  .btn-two span {
+    z-index: 2; 
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%; 
+  }
+  .btn-two::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: all 0.5s;
+    background-color: rgba(255,255,255,0.1);
+  }
+  .btn-two::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: all 0.5s;
+    background-color: rgba(255,255,255,0.1);
+  }
+  .btn-two:hover::before {
+    transform: rotate(-45deg);
+    background-color: rgba(255,255,255,0);
+  }
+  .btn-two:hover::after {
+    transform: rotate(45deg);
+    background-color: rgba(255,255,255,0);
+  }
+.box-2{
+    position: absolute;
+    left: 50%;
+}
+.box-2 a{
+    color: #000000;
+    text-decoration: none;
 }
